kubernetes/mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb

  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo

          ports:
            - containerPort: 27017

          resources:
            limits:
              memory: "256Mi"
              cpu: ".5"

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service

spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
