kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  labels:
    name: app-ingress
spec:
  rules:
    - host: ui.todo.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: ui-service
                port:
                  number: 3000

    - host: api.todo.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 80
